<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_connection_settings"
        android:key="pref_key_connection_settings">
        <EditTextPreference
            android:key="pref_connection_server"
            android:title="@string/pref_connection_server"
            android:summary="@string/pref_connection_server_summary"
            android:defaultValue=""
            />
        <EditTextPreference
            android:key="pref_connection_server_username"
            android:title="@string/pref_connection_server_username"
            android:summary="@string/pref_connection_server_username_summary"
            android:defaultValue=""
            />
        <EditTextPreference
            android:key="pref_connection_server_password"
            android:title="@string/pref_connection_server_password"
            android:summary="@string/pref_connection_server_password_summary"
            android:defaultValue=""
            />
        <EditTextPreference
            android:key="pref_connection_icws_port"
            android:title="@string/pref_connection_icws_port"
            android:summary="@string/pref_connection_icws_port_summary"
            android:defaultValue="8018"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_alerts_settings"
        android:key="pref_alerts_settings">
        <EditTextPreference
            android:key="pref_alerts_queue"
            android:title="@string/pref_alerts_queue"
            android:summary="@string/pref_alerts_queue_summary"
            android:defaultValue="Marketing"
            />
    </PreferenceCategory>

</PreferenceScreen>